Fix button width on mobile

--- a/src/styles/LevelNavMenu.css
+++ b/src/styles/LevelNavMenu.css
@@ -30,7 +30,6 @@
     display: none;
   }
   .flat-button {
-    width: 65px;
     align-self: center;
   }
 }
